Overflow issue solved

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.chat-room::-webkit-scrollbar{
+    display: none;
+}
